--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body,
         html {
-            height: 100vh;
+/*             height: 100vh; */
             display: flex;
             justify-content: center;
             align-items: center;
