--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 <body>
     <form action="">
-        <label for="textarea">Word Counter <img src="./icons8-counter.gif" alt=""></label>
+        <label for="textarea">Word Counter <img src="./output-onlinegiftools.gif" alt="counter" style="height:1.5rem ;"></label>
         <textarea name="textarea" id="txtar" placeholder="<==Type Here==>"></textarea>
 
         <div class="counters">
