--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@
 
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/pulsar-color/96/counter.png">
     <title>Dynamic Word Counter</title>
 </head>
 
 <body>
     <form action="">
-        <label for="textarea">Word Counter <img src="./output-onlinegiftools.gif" alt="counter" style="height:1.5rem ;"></label>
+        <label for="textarea">Word Counter <img src="https://res.cloudinary.com/dppnjyn8a/image/upload/v1750413004/counterAni_a6nrrc.gif" alt="counter"
+                style="height:1.5rem ;"></label>
         <textarea name="textarea" id="txtar" placeholder="<==Type Here==>"></textarea>
 
         <div class="counters">
@@ -149,7 +151,7 @@
         <button type="button" onclick="resetBtn()">Reset Textarea</button>
     </form>
 
-    <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
